--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -321,10 +321,8 @@
   Loadout0 Default
   Altitude0 3000 5000
 [Aircraft.BlenheimMkIV_MARITIME_RECON]
-  Loadout0 4x250lb
-  Altitude0 500 2000
-  Loadout1 4x250lb
-  Altitude1 500 2000
+  Loadout0 Default
+  Altitude0 3000 5000
 [Aircraft.BlenheimMkIV_ATTACK_ARMOR]
   Loadout0 4x250lb
   Altitude0 500 2000
@@ -362,35 +360,127 @@
   MissionType3 ATTACK_RADAR
   MissionType4 ARMED_RECON
   MissionType5 ARMED_MARITIME_RECON
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-[Aircraft.BR-20M_RECON_AREA]
-  Loadout0 1 1 1 0
-[Aircraft.BR-20M_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 2
-  Loadout1 1 1 1 3
-  Loadout2 1 1 1 4
-  Loadout3 1 1 1 5
-  Loadout4 1 1 1 6
+[Aircraft.BR-20M_Default]
+  Weapons 1 1 1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_12x50T]
+  Weapons 1 1 1 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_12x100T]
+  Weapons 1 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_12x100M]
+  Weapons 1 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_4x250T]
+  Weapons 1 1 1 4
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_2x500MT]
+  Weapons 1 1 1 5
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_2x800T]
+  Weapons 1 1 1 6  
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.BR-20M_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.BR-20M_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.BR-20M_ATTACK_ARMOR]
+  Loadout0 12x100M
+  Altitude0 500 2000
+  Loadout1 2x500MT
+  Altitude1 500 2000
+  Loadout2 2x800T
+  Altitude2 500 2000
+[Aircraft.BR-20M_ATTACK_VEHICLE]
+  Loadout0 12x50T
+  Altitude0 500 2000
+  Loadout1 12x100T
+  Altitude1 500 2000
+  Loadout2 2x500MT
+  Altitude2 500 2000
+[Aircraft.BR-20M_ATTACK_SHIP]
+  Loadout0 2x500MT
+  Altitude0 500 2000
+  Loadout1 2x800T
+  Altitude1 500 2000
+[Aircraft.BR-20M_ATTACK_RADAR]
+  Loadout0 2x500MT
+  Altitude0 500 2000
+  Loadout1 2x800T
+  Altitude1 500 2000
+[Aircraft.BR-20M_ARMED_RECON]
+  Loadout0 12x100M
+  Altitude0 500 2000
+  Loadout1 2x500MT
+  Altitude1 500 2000
+  Loadout2 2x800T
+  Altitude2 500 2000
+[Aircraft.BR-20M_ARMED_MARITIME_RECON]
+  Loadout0 2x500MT
+  Altitude0 500 2000
+  Loadout1 2x800T
+  Altitude1 500 2000
 [Aircraft.CR42]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
+[Aircraft.CR42_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.CR42_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.CR42_INTERCEPT]
-  Loadout0 1  
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.DefiantMkI]
   MissionType0 INTERCEPT
+  MissionType1 NIGHT_INTERCEPT
+[Aircraft.DefiantMkI_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.DefiantMkI_INTERCEPT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
+[Aircraft.DefiantMkI_NIGHT_INTERCEPT]
+  Loadout0 Default
+  Altitude0 0 10000
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.Do-17Z-1]
   MissionType0 RECON_AREA
   MissionType1 GROUND_ATTACK_TARGET
@@ -426,20 +516,63 @@
   Loadout0 1 1 1 1 0 0 0 
 [Aircraft.FW-200C-1_GROUND_ATTACK_TARGET]
   Loadout0 1 1 1 1 2 2 2
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.G50]
-  MissionType2 ESCORT
-  MissionType3 INTERCEPT 
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.G50_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.G50_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.G50_INTERCEPT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.GladiatorMkII]
-  MissionType2 ESCORT
-  MissionType3 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.GladiatorMkII_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.GladiatorMkII_ESCORT]
-  Loadout0 1 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.GladiatorMkII_INTERCEPT]
-  Loadout0 1 1
+  Loadout0 Default
+  Altitude0 0 10000  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.He-111H-2]
   MissionType0 RECON_AREA
   MissionType1 GROUND_ATTACK_TARGET  
@@ -466,23 +599,78 @@
 [Aircraft.He-115B-2_GROUND_ATTACK_TARGET]
   Loadout0 1 1 2
   Loadout1 1 1 3
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.SpitfireMkI_Heartbreaker]
-  MissionType2 ESCORT
-  MissionType3 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.SpitfireMkI_Heartbreaker_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.SpitfireMkI_Heartbreaker_ESCORT]
+  Loadout0 Default
+  Altitude0 0 10000
+[Aircraft.SpitfireMkI_Heartbreaker_INTERCEPT]
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.HurricaneMkI_dH5-20]
-  MissionType2 ESCORT
-  MissionType3 INTERCEPT
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.HurricaneMkI_dH5-20_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.HurricaneMkI_dH5-20_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.HurricaneMkI_dH5-20_INTERCEPT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000  
 [Aircraft.HurricaneMkI]
-  MissionType2 ESCORT
-  MissionType3 INTERCEPT  
-[Aircraft.HurricaneMkI]
-  Loadout0 1
-[Aircraft.HurricaneMkI]
-  Loadout0 1  
+  MissionType0 ESCORT
+  MissionType1 INTERCEPT
+[Aircraft.HurricaneMkI_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.HurricaneMkI_ESCORT]
+  Loadout0 Default
+  Altitude0 0 10000
+[Aircraft.HurricaneMkI_INTERCEPT]
+  Loadout0 Default
+  Altitude0 0 10000
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.Ju-87B-2]
   MissionType0 GROUND_ATTACK_TARGET
 [Aircraft.Ju-87B-2_GROUND_ATTACK_TARGET]
@@ -498,43 +686,114 @@
 [Aircraft.Ju-88A-1_GROUND_ATTACK_TARGET]
   Loadout0 1 1 1 2 2 2
   Loadout1 1 1 1 3 2 6
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.SpitfireMkI]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
+[Aircraft.SpitfireMkI_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.SpitfireMkI_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SpitfireMkI_INTERCEPT]
-  Loadout0 1  
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SpitfireMkIa]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
+[Aircraft.SpitfireMkIa_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.SpitfireMkIa_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SpitfireMkIa_INTERCEPT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SpitfireMkIIa]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
+[Aircraft.SpitfireMkIIa_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
 [Aircraft.SpitfireMkIIa_ESCORT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SpitfireMkIIa_INTERCEPT]
-  Loadout0 1
+  Loadout0 Default
+  Altitude0 0 10000
 [Aircraft.SunderlandMkI]
-  MissionType0 RECON_AREA
-[Aircraft.SunderlandMkI_RECON_AREA]  
-  Loadout0 1
+  MissionType0 MARITIME_RECON
+[Aircraft.SunderlandMkI_Default]  
+  Weapons 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.SunderlandMkI_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
 [Aircraft.DH82A]
-  MissionType0 RECON_AREA
-[Aircraft.DH82A_RECON_AREA]  
-  Loadout0 1
+  MissionType0 LIASON
+[Aircraft.DH82A_Default]
+  Weapons 1
+  Fuel 100
+  Range #
+[Aircraft.DH82A_LIASON]
+  Loadout0 Default
+  Altitude0 500 2000
 [Aircraft.WalrusMkI]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET
-[Aircraft.WalrusMkI_RECON_AREA]  
-  Loadout0 1 1 0 0
-[Aircraft.WalrusMkI_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 2 2
-  Loadout1 1 1 3 3
+  MissionType0 MARITIME_RECON
+  MissionType0 ARMED_MARITIME_RECON
+[Aircraft.WalrusMkI_Default]  
+  Weapons 1 1 0 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WalrusMkI_2x250lb]  
+  Weapons 1 1 2 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WalrusMkI_2xDepthCharge]  
+  Weapons 1 1 3 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WalrusMkI_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
+[Aircraft.WalrusMkI_ARMED_MARITIME_RECON]
+  Loadout0 2x250lb
+  Altitude0 1000 5000
+  Loadout1 2xDepthCharge
+  Altitude1 1000 5000
+  
+  
+  
+  
+  
+  
+  
 [Aircraft.WellingtonMkIc]
   MissionType0 RECON_AREA
   MissionType1 GROUND_ATTACK_TARGET
