--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -122,8 +122,6 @@
   MissionType1 ATTACK_VEHICLE
   MissionType2 ATTACK_SHIP
   MissionType3 ATTACK_RADAR
-  MissionType4 ARMED_RECON
-  MissionType5 ARMED_MARITIME_RECON
 [Aircraft.Bf-109E-3B_4xSC50]
   Weapons 1 1 2
   Fuel 100
@@ -152,14 +150,6 @@
   Altitude0 500 2000
   Loadout1 1xSC250
   Altitude1 500 2000
-[Aircraft.Bf-109E-3B_ARMED_RECON]
-  Loadout0 4xSC50
-  Altitude0 500 2000
-  Loadout1 1xSC250
-  Altitude1 500 2000
-[Aircraft.Bf-109E-3B_ARMED_MARITIME_RECON]
-  Loadout0 1xSC250
-  Altitude0 500 2000
 [Aircraft.Bf-110C-4]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
@@ -183,8 +173,6 @@
   MissionType1 ATTACK_VEHICLE
   MissionType2 ATTACK_SHIP
   MissionType3 ATTACK_RADAR
-  MissionType4 ARMED_RECON
-  MissionType5 ARMED_MARITIME_RECON
 [Aircraft.Bf-110C-7_2xSC250]
   Weapons 1 1 1 2
   Fuel 100
@@ -225,16 +213,6 @@
   Altitude0 500 2000
   Loadout1 2xSC500
   Altitude1 500 2000
-[Aircraft.Bf-110C-7_ARMED_RECON]
-  Loadout0 2xSC250
-  Altitude0 500 2000
-  Loadout1 2xSC500
-  Altitude1 500 2000
-[Aircraft.Bf-110C-7_ARMED_MARITIME_RECON]
-  Loadout0 2xSC250
-  Altitude0 500 2000
-  Loadout1 2xSC500
-  Altitude1 500 2000
 [Aircraft.BlenheimMkI]
   MissionType0 ATTACK_ARMOR
   MissionType1 ATTACK_VEHICLE
@@ -242,6 +220,8 @@
   MissionType3 ATTACK_RADAR
   MissionType4 ARMED_RECON
   MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
 [Aircraft.BlenheimMkI_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -302,6 +282,8 @@
   MissionType3 ATTACK_RADAR
   MissionType4 ARMED_RECON
   MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
 [Aircraft.BlenheimMkIV_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -360,6 +342,8 @@
   MissionType3 ATTACK_RADAR
   MissionType4 ARMED_RECON
   MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
 [Aircraft.BR-20M_Default]
   Weapons 1 1 1 0
   Fuel 100
@@ -465,25 +449,18 @@
 [Aircraft.DefiantMkI_NIGHT_INTERCEPT]
   Loadout0 Default
   Altitude0 0 10000
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
 [Aircraft.Do-17Z-1]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+
+  
+  
 [Aircraft.Do-17Z-1_RECON_AREA]
   Loadout0 1 1 1 1 0 0
 [Aircraft.Do-17Z-1_GROUND_ATTACK_TARGET]
@@ -657,6 +634,36 @@
 [Aircraft.HurricaneMkI_INTERCEPT]
   Loadout0 Default
   Altitude0 0 10000
+[Aircraft.Ju-87B-2]
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+[Aircraft.Ju-87B-2_Default]
+  Weapons 1 1 0 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-87B-2_1xSC250+4xSC50]
+  Weapons 1 1 1 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-87B-2_1xSD250+4xSC50]
+  Weapons 1 1 3 1
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-87B-2_1xSC500]
+  Weapons 1 1 2 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-87B-2_1xSD500]
+  Weapons 1 1 4 0
+  Fuel 100
+  Range #
+  Ceiling #
 
   
   
@@ -665,19 +672,6 @@
   
   
   
-  
-  
-  
-  
-  
-  
-[Aircraft.Ju-87B-2]
-  MissionType0 GROUND_ATTACK_TARGET
-[Aircraft.Ju-87B-2_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1
-  Loadout1 1 1 3 1
-  Loadout2 1 1 2 0
-  Loadout3 1 1 4 0
 [Aircraft.Ju-88A-1]
   MissionType0 RECON_AREA
   MissionType1 GROUND_ATTACK_TARGET
@@ -686,16 +680,6 @@
 [Aircraft.Ju-88A-1_GROUND_ATTACK_TARGET]
   Loadout0 1 1 1 2 2 2
   Loadout1 1 1 1 3 2 6
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
   
   
@@ -787,24 +771,63 @@
   Altitude0 1000 5000
   Loadout1 2xDepthCharge
   Altitude1 1000 5000
-  
-  
-  
-  
-  
-  
-  
 [Aircraft.WellingtonMkIc]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET
-  [Aircraft.WellingtonMkIc_RECON_AREA]  
-  Loadout0 1 1 0
-[Aircraft.WellingtonMkIc_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 2
-  Loadout1 1 1 3
-
-
- 
-
-
-
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+[Aircraft.WellingtonMkIc_Default]
+  Weapons 1 1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WellingtonMkIc_18x250lb]
+  Weapons 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WellingtonMkIc_9x500lb]
+  Weapons 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.WellingtonMkIc_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.WellingtonMkIc_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.WellingtonMkIc_ATTACK_ARMOR]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000
+[Aircraft.WellingtonMkIc_ATTACK_VEHICLE]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000
+[Aircraft.WellingtonMkIc_ATTACK_SHIP]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000
+[Aircraft.WellingtonMkIc_ATTACK_RADAR]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000
+[Aircraft.WellingtonMkIc_ARMED_RECON]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000
+[Aircraft.WellingtonMkIc_ARMED_MARITIME_RECON]
+  Loadout0 18x250lb
+  Altitude0 500 2000
+  Loadout1 9x250lb
+  Altitude1 500 2000  
