--- a/trunk/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/trunk/IL2DCE/Campaigns/AircraftInfo.ini
@@ -458,58 +458,162 @@
   MissionType5 ARMED_MARITIME_RECON
   MissionType6 RECON
   MissionType7 MARITIME_RECON
-
-  
-  
-[Aircraft.Do-17Z-1_RECON_AREA]
-  Loadout0 1 1 1 1 0 0
-[Aircraft.Do-17Z-1_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1 4 2
-  Loadout1 1 1 1 1 4 3
-  Loadout2 1 1 1 1 5 2
-  Loadout3 1 1 1 1 5 3
+[Aircraft.Do-17Z-1_Default]
+  Weapons 1 1 1 1 0 0 
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-1_20xSC50]  
+  Weapons 1 1 1 1 4 2  
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-1_2xSC250]  
+  Weapons 1 1 1 1 5 3  
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-1_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Do-17Z-1_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Do-17Z-1_ATTACK_ARMOR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-1_ATTACK_VEHICLE]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-1_ATTACK_SHIP]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+[Aircraft.Do-17Z-1_ATTACK_RADAR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-1_ARMED_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-1_ARMED_MARITIME_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
 [Aircraft.Do-17Z-2]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET  
-[Aircraft.Do-17Z-2_RECON_AREA]
-  Loadout0 1 1 1 1 0 0  
-[Aircraft.Do-17Z-2_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1 4 2
-  Loadout1 1 1 1 1 4 3
-  Loadout2 1 1 1 1 5 2
-  Loadout3 1 1 1 1 5 3
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+[Aircraft.Do-17Z-2_Default]
+  Weapons 1 1 1 1 1 1 0 0 
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-2_20xSC50]  
+  Weapons 1 1 1 1 1 1 4 2  
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-2_2xSC250]  
+  Weapons 1 1 1 1 1 1 5 3  
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-17Z-2_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Do-17Z-2_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Do-17Z-2_ATTACK_ARMOR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-2_ATTACK_VEHICLE]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-2_ATTACK_SHIP]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+[Aircraft.Do-17Z-2_ATTACK_RADAR]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-2_ARMED_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
+  Loadout1 20xSC50
+  Altitude1 500 2000
+[Aircraft.Do-17Z-2_ARMED_MARITIME_RECON]
+  Loadout0 2xSC250
+  Altitude0 500 2000
 [Aircraft.Do-215B-1]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET  
-[Aircraft.Do-215B-1_RECON_AREA]
-  Loadout0 1 1 1 1 0  
-[Aircraft.Do-215B-1_GROUND_ATTACK_TARGET]
-  Loadout1 1 1 1 1 2
-  Loadout2 1 1 1 1 3
+  MissionType0 ARMED_RECON
+  MissionType1 ARMED_MARITIME_RECON
+  MissionType2 RECON
+  MissionType3 MARITIME_RECON 
+[Aircraft.Do-215B-1_Default]
+  Weapons 1 1 1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-215B-1_10xSC50]
+  Weapons 1 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-215B-1_1xSC250]
+  Weapons 1 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Do-215B-1_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
+[Aircraft.Do-215B-1_ARMED_MARITIME_RECON]
+  Loadout0 1xSC250
+  Altitude0 1000 5000
+[Aircraft.Do-215B-1_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
+[Aircraft.Do-215B-1_ARMED_RECON]
+  Loadout0 1xSC250
+  Altitude0 1000 5000
+  Loadout0 10xSC50
+  Altitude0 1000 5000
 [Aircraft.FW-200C-1]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET    
-[Aircraft.FW-200C-1_RECON_AREA]
-  Loadout0 1 1 1 1 0 0 0 
-[Aircraft.FW-200C-1_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1 2 2 2
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  MissionType0 ARMED_MARITIME_RECON
+  MissionType1 MARITIME_RECON
+[Aircraft.FW-200C-1_Default]
+  Weapons 1 1 1 1 0 0 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.FW-200C-1_2xSC500+2xSC250]
+  Weapons 1 1 1 1 2 2 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.FW-200C-1_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
+[Aircraft.FW-200C-1_ARMED_MARITIME_RECON]
+  Loadout0 2xSC500+2xSC25
+  Altitude0 1000 5000
 [Aircraft.G50]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
@@ -537,61 +641,148 @@
   Altitude0 0 10000
 [Aircraft.GladiatorMkII_INTERCEPT]
   Loadout0 Default
-  Altitude0 0 10000  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  Altitude0 0 10000
 [Aircraft.He-111H-2]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET  
-[Aircraft.He-111H-2_RECON_AREA]
-  Loadout0 1 1 1 1 1 1 0
-[Aircraft.He-111H-2_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1 1 1 2
-  Loadout1 1 1 1 1 1 1 3
-  Loadout2 1 1 1 1 1 1 4
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+[Aircraft.He-111H-2_Default]
+  Weapons 1 1 1 1 1 1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111H-2_8xSC250]
+  Weapons 1 1 1 1 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111H-2_8xSD250]
+  Weapons 1 1 1 1 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111H-2_32xSC50]
+  Weapons 1 1 1 1 1 1 4
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111H-2_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.He-111H-2_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.He-111H-2_ATTACK_ARMOR]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111PH-2_ATTACK_VEHICLE]
+  Loadout0 8xSD250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111H-2_ATTACK_SHIP]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+[Aircraft.He-111H-2_ATTACK_RADAR]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+[Aircraft.He-111H-2_ARMED_RECON]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111H-2_ARMED_MARITIME_RECON]
+  Loadout0 8xSC250
+  Altitude0 500 2000  
 [Aircraft.He-111P-2]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET
-[Aircraft.He-111P-2_RECON_AREA]
-  Loadout0 1 1 1 1 1 1 0
-[Aircraft.He-111P-2_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 1 1 1 2
-  Loadout1 1 1 1 1 1 1 3
-  Loadout2 1 1 1 1 1 1 4
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+[Aircraft.He-111P-2_Default]
+  Weapons 1 1 1 1 1 1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111P-2_8xSC250]
+  Weapons 1 1 1 1 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111P-2_8xSD250]
+  Weapons 1 1 1 1 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111P-2_32xSC50]
+  Weapons 1 1 1 1 1 1 4
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-111P-2_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.He-111P-2_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.He-111P-2_ATTACK_ARMOR]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111P-2_ATTACK_VEHICLE]
+  Loadout0 8xSD250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111P-2_ATTACK_SHIP]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+[Aircraft.He-111P-2_ATTACK_RADAR]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+[Aircraft.He-111P-2_ARMED_RECON]
+  Loadout0 8xSC250
+  Altitude0 500 2000
+  Loadout1 32xSC50
+  Altitude1 500 2000
+[Aircraft.He-111P-2_ARMED_MARITIME_RECON]
+  Loadout0 8xSC250
+  Altitude0 500 2000
 [Aircraft.He-115B-2]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET    
-[Aircraft.He-115B-2_RECON_AREA]
+  MissionType0 MARITIME_RECON
+  MissionType1 ARMED_MARITIME_RECON
+[Aircraft.He-115B-2_Default]
   Loadout0 1 1 0
-[Aircraft.He-115B-2_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 2
-  Loadout1 1 1 3
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+[Aircraft.He-115B-2_1xTorpedo]
+  Weapons 1 1 2
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-115B-2_2xSC250]
+  Weapons 1 1 3
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.He-115B-2_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 1000 5000
+[Aircraft.He-115B-2_ARMED_MARITIME_RECON]
+  Loadout0 1xTorpedo
+  Altitude0 1000 5000
+  Loadout1 2xSC250
+  Altitude1 1000 5000
 [Aircraft.SpitfireMkI_Heartbreaker]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
@@ -663,27 +854,55 @@
   Weapons 1 1 4 0
   Fuel 100
   Range #
-  Ceiling #
-
-  
-  
-  
-  
-  
-  
-  
+  Ceiling #  
 [Aircraft.Ju-88A-1]
-  MissionType0 RECON_AREA
-  MissionType1 GROUND_ATTACK_TARGET
-[Aircraft.Ju-88A-1_RECON_AREA]  
-  Loadout0 1 1 1 0 0 0
-[Aircraft.Ju-88A-1_GROUND_ATTACK_TARGET]
-  Loadout0 1 1 1 2 2 2
-  Loadout1 1 1 1 3 2 6
-  
-  
-  
-  
+  MissionType0 ATTACK_ARMOR
+  MissionType1 ATTACK_VEHICLE
+  MissionType2 ATTACK_SHIP
+  MissionType3 ATTACK_RADAR
+  MissionType4 ARMED_RECON
+  MissionType5 ARMED_MARITIME_RECON
+  MissionType6 RECON
+  MissionType7 MARITIME_RECON
+[Aircraft.Ju-88A-1_Default]
+  Weapons 1 1 1 0 0 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-88A-1_4xSC250]
+  Weapons 1 1 1 0 0 4
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-88A-1_4xSD250]
+  Weapons 1 1 1 0 0 5
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Ju-88A-1_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Ju-88A-1_MARITIME_RECON]
+  Loadout0 Default
+  Altitude0 3000 5000
+[Aircraft.Ju-88A-1_ATTACK_ARMOR]
+  Loadout0 4xSC250
+  Altitude0 500 2000
+[Aircraft.Ju-88A-1_ATTACK_VEHICLE]
+  Loadout0 4xSD250
+  Altitude0 500 2000  
+[Aircraft.Ju-88A-1_ATTACK_SHIP]
+  Loadout0 4xSC250
+  Altitude0 500 2000
+[Aircraft.Ju-88A-1_ATTACK_RADAR]
+  Loadout0 4xSC250
+  Altitude0 500 2000
+[Aircraft.Ju-88A-1_ARMED_RECON]
+  Loadout0 4xSC250
+  Altitude0 500 2000
+[Aircraft.Ju-88A-1_ARMED_MARITIME_RECON]
+  Loadout0 4xSC250
+  Altitude0 500 2000
 [Aircraft.SpitfireMkI]
   MissionType0 ESCORT
   MissionType1 INTERCEPT
@@ -747,7 +966,7 @@
   Altitude0 500 2000
 [Aircraft.WalrusMkI]
   MissionType0 MARITIME_RECON
-  MissionType0 ARMED_MARITIME_RECON
+  MissionType1 ARMED_MARITIME_RECON
 [Aircraft.WalrusMkI_Default]  
   Weapons 1 1 0 0
   Fuel 100
@@ -830,4 +1049,4 @@
   Loadout0 18x250lb
   Altitude0 500 2000
   Loadout1 9x250lb
-  Altitude1 500 2000  
+  Altitude1 500 2000
