--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -22,7 +22,7 @@
   Aircraft.AnsonMkI
   Aircraft.BeaufighterMkIF
   Aircraft.Bf-108B-2
-  Aircraft.Bf-109E-1
+  Aircraft.Bf-109E-1 
   Aircraft.Bf-109E-3
   Aircraft.Bf-109E-3B
   Aircraft.Bf-110C-4
@@ -30,22 +30,22 @@
   Aircraft.BlenheimMkI
   Aircraft.BlenheimMkIV
   Aircraft.BR-20M
-  Aircraft.CR42  
+  Aircraft.CR42
   Aircraft.DefiantMkI
   Aircraft.Do-17Z-1
-  Aircraft.Do-17Z-2  
+  Aircraft.Do-17Z-2
   Aircraft.Do-215B-1
   Aircraft.FW-200C-1
   Aircraft.G50
   Aircraft.GladiatorMkII
   Aircraft.He-111H-2
-  Aircraft.He-111P-2  
-  Aircraft.He-115B-2  
-  Aircraft.SpitfireMkI_Heartbreaker  
+  Aircraft.He-111P-2
+  Aircraft.He-115B-2
+  Aircraft.SpitfireMkI_Heartbreaker
   Aircraft.HurricaneMkI_dH5-20
   Aircraft.HurricaneMkI
-  Aircraft.Ju-87B-2  
-  Aircraft.Ju-88A-1  
+  Aircraft.Ju-87B-2
+  Aircraft.Ju-88A-1
   Aircraft.SpitfireMkI
   Aircraft.SpitfireMkIa
   Aircraft.SpitfireMkIIa
@@ -54,6 +54,7 @@
   Aircraft.WalrusMkI
   Aircraft.WellingtonMkIc
 [Aircraft.AnsonMkI]
+  Player 0
   RECON /Default 500 5000
   MARTITIME_RECON /Default 500 5000
 [Aircraft.AnsonMkI_Default]
@@ -62,6 +63,7 @@
   Range #
   Ceiling #
 [Aircraft.BeaufighterMkIF]
+  Player 0
   NIGHT_INTERCEPT /Default 0 10000
   NIGHT_INTRUDER /Default 300 3000
 [Aircraft.BeaufighterMkIF_Default]
@@ -70,6 +72,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-108B-2]
+  Player 0
   LIASON /Default 500 2000
 [Aircraft.Bf-108B-2_Default]
   Weapons 1
@@ -77,6 +80,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-109E-1]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.Bf-109E-1_Default]
@@ -85,6 +89,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-109E-3]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.Bf-109E-3_Default]
@@ -93,6 +98,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-109E-3B]
+  Player 1
   ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
   ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
   ATTACK_SHIP /1xSC250 500 2000
@@ -108,6 +114,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-110C-4]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
   NIGHT_INTERCEPT /Default 0 10000
@@ -117,6 +124,7 @@
   Range #
   Ceiling #
 [Aircraft.Bf-110C-7]
+  Player 1
   ATTACK_ARMOR /2xSC250 500 2000 /2xSC500 500 2000
   ATTACK_VEHICLE /2xSD250 500 2000 /2xSD500 500 2000
   ATTACK_SHIP /2xSC250 500 2000 /2xSC500 500 2000
@@ -142,6 +150,7 @@
   Range #
   Ceiling #
 [Aircraft.BlenheimMkI]
+  Player 0
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /4x250lb 500 2000 /4x250lb 500 2000
@@ -166,6 +175,7 @@
   Range #
   Ceiling #
 [Aircraft.BlenheimMkIV]
+  Player 1
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /4x250lb 500 2000 /4x250lb 500 2000
@@ -190,6 +200,7 @@
   Range #
   Ceiling #
 [Aircraft.BR-20M]
+  Player 1
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /12x100M 500 2000 /2x500MT 500 2000 /2x800T 500 2000
@@ -234,6 +245,7 @@
   Range #
   Ceiling #
 [Aircraft.CR42]
+  Player 0
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.CR42_Default]
@@ -242,6 +254,7 @@
   Range #
   Ceiling #
 [Aircraft.DefiantMkI]
+  Player 0
   INTERCEPT /Default 0 10000
   NIGHT_INTERCEPT /Default 0 10000
 [Aircraft.DefiantMkI_Default]
@@ -250,6 +263,7 @@
   Range #
   Ceiling #
 [Aircraft.Do-17Z-1]
+  Player 0
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /2xSC250 500 2000 /20xSC50 500 2000
@@ -274,6 +288,7 @@
   Range #
   Ceiling #
 [Aircraft.Do-17Z-2]
+  Player 0
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /2xSC250 500 2000 /20xSC50 500 2000
@@ -298,6 +313,7 @@
   Range #
   Ceiling #
 [Aircraft.Do-215B-1]
+  Player 0
   RECON /Default 1000 5000
   MARITIME_RECON /Default 1000 5000
   ARMED_RECON /1xSC250 1000 5000
@@ -318,6 +334,7 @@
   Range #
   Ceiling #
 [Aircraft.FW-200C-1]
+  Player 0
   MARITIME_RECON /Default 1000 5000
   ARMED_MARITIME_RECON /2xSC500+2xSC25 1000 5000
 [Aircraft.FW-200C-1_Default]
@@ -331,6 +348,7 @@
   Range #
   Ceiling #
 [Aircraft.G50]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.G50_Default]
@@ -339,6 +357,7 @@
   Range #
   Ceiling #
 [Aircraft.GladiatorMkII]
+  Player 0
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.GladiatorMkII_Default]
@@ -347,6 +366,7 @@
   Range #
   Ceiling #
 [Aircraft.He-111H-2]
+  Player 1
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /8xSC250 500 2000 /32xSC50 500 2000
@@ -376,6 +396,7 @@
   Range #
   Ceiling #
 [Aircraft.He-111P-2]
+  Player 1
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /8xSC250 500 2000 /32xSC50 500 2000
@@ -405,6 +426,7 @@
   Range #
   Ceiling #
 [Aircraft.He-115B-2]
+  Player 0
   MARITIME_RECON /Default 1000 5000
   ARMED_MARITIME_RECON /1xTorpedo 1000 5000 /2xSC250 1000 5000
 [Aircraft.He-115B-2_Default]
@@ -420,6 +442,7 @@
   Range #
   Ceiling #
 [Aircraft.SpitfireMkI_Heartbreaker]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.SpitfireMkI_Heartbreaker_Default]
@@ -428,6 +451,7 @@
   Range #
   Ceiling #
 [Aircraft.HurricaneMkI_dH5-20]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.HurricaneMkI_dH5-20_Default]
@@ -436,6 +460,7 @@
   Range #
   Ceiling #
 [Aircraft.HurricaneMkI]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.HurricaneMkI_Default]
@@ -444,6 +469,7 @@
   Range #
   Ceiling #
 [Aircraft.Ju-87B-2]
+  Player 1
   ATTACK_ARMOR /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
   ATTACK_VEHICLE /1xSD250+4xSC50 1000 5000 /1xSD500 1000 5000
   ATTACK_SHIP /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
@@ -474,6 +500,7 @@
   Range #
   Ceiling #  
 [Aircraft.Ju-88A-1]
+  Player 1
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /4xSC250 500 2000
@@ -498,6 +525,7 @@
   Range #
   Ceiling #
 [Aircraft.SpitfireMkI]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.SpitfireMkI_Default]
@@ -506,6 +534,7 @@
   Range #
   Ceiling #
 [Aircraft.SpitfireMkIa]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.SpitfireMkIa_Default]
@@ -514,6 +543,7 @@
   Range #
   Ceiling #
 [Aircraft.SpitfireMkIIa]
+  Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
 [Aircraft.SpitfireMkIIa_Default]
@@ -529,12 +559,14 @@
   Range #
   Ceiling #
 [Aircraft.DH82A]
+  Player 1
   LIASON /Default 500 2000
 [Aircraft.DH82A_Default]
   Weapons 1
   Fuel 100
   Range #
 [Aircraft.WalrusMkI]
+  Player 0
   MARITIME_RECON /Default 1000 5000
   ARMED_MARITIME_RECON /2x250lb 1000 5000 /2xDepthCharge 1000 5000
 [Aircraft.WalrusMkI_Default]  
@@ -553,6 +585,7 @@
   Range #
   Ceiling #
 [Aircraft.WellingtonMkIc]
+  Player 0
   RECON /Default 3000 5000
   MARITIME_RECON /Default 3000 5000
   ARMED_RECON /18x250lb 500 2000 /9x250lb 500 2000
