--- a/IL2DCE/IL2DCE/IL2DCE.csproj
+++ b/IL2DCE/IL2DCE/IL2DCE.csproj
@@ -51,6 +51,7 @@
     <Compile Include="GroundGroupSubWaypoint.cs" />
     <Compile Include="Interfaces\IAircraftLoadoutInfo.cs" />
     <Compile Include="Interfaces\IAircraftParametersInfo.cs" />
+    <Compile Include="Interfaces\IAirGroupInfo.cs" />
     <Compile Include="Interfaces\IBriefingFile.cs" />
     <Compile Include="Interfaces\ICareer.cs" />
     <Compile Include="Interfaces\ICampaignInfo.cs" />
