--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -83,6 +83,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.Bf-109E-1_Default]
   Weapons 1 1
   Fuel 100
@@ -92,6 +93,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.Bf-109E-3_Default]
   Weapons 1 1
   Fuel 100
@@ -117,6 +119,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
   NIGHT_INTERCEPT /Default 0 10000
 [Aircraft.Bf-110C-4_Default]
   Weapons 1 1 1
@@ -248,6 +251,7 @@
   Player 0
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.CR42_Default]
   Weapons 1
   Fuel 100
@@ -256,6 +260,7 @@
 [Aircraft.DefiantMkI]
   Player 0
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
   NIGHT_INTERCEPT /Default 0 10000
 [Aircraft.DefiantMkI_Default]
   Weapons 1
@@ -351,6 +356,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.G50_Default]
   Weapons 1
   Fuel 100
@@ -360,6 +366,7 @@
   Player 0
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.GladiatorMkII_Default]
   Weapons 1
   Fuel 100
@@ -445,6 +452,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.SpitfireMkI_Heartbreaker_Default]
   Weapons 1
   Fuel 100
@@ -463,6 +471,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.HurricaneMkI_Default]
   Weapons 1
   Fuel 100
@@ -528,6 +537,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.SpitfireMkI_Default]
   Weapons 1
   Fuel 100
@@ -537,6 +547,7 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.SpitfireMkIa_Default]
   Weapons 1
   Fuel 100
@@ -546,13 +557,15 @@
   Player 1
   ESCORT /Default 0 10000
   INTERCEPT /Default 0 10000
+  COVER /Default 0 10000
 [Aircraft.SpitfireMkIIa_Default]
   Weapons 1
   Fuel 100
   Range #
   Ceiling #
 [Aircraft.SunderlandMkI]
-  MissionType0 MARITIME_RECON /Default 1000 5000
+  Player 0
+  MARITIME_RECON /Default 1000 5000
 [Aircraft.SunderlandMkI_Default]  
   Weapons 1
   Fuel 100
