Core can now be created within a mission script (doesn't depend on a addin anymore).

--- a/IL2DCE/IL2DCE.Mission/IL2DCE.Mission.csproj
+++ b/IL2DCE/IL2DCE.Mission/IL2DCE.Mission.csproj
@@ -43,6 +43,7 @@
     </Compile>
     <Compile Include="Mission.cs" />
     <Compile Include="MissionServer.cs" />
+    <Compile Include="MissionSingle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
