--- a/trunk/IL2DCE/IL2DCE/conf.ini
+++ b/trunk/IL2DCE/IL2DCE/conf.ini
@@ -2,6 +2,8 @@
   campaignsFolder $user/missions/IL2DCE/Campaigns
 [Core]
   forceSetOnPark 0
+  flightSize 1.0
+  flightCount 1.0
   additionalAirOperations 1
   additionalGroundOperations 0
   debug 1
