--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -92,22 +92,6 @@
   Fuel 100
   Range #
   Ceiling #
-[Aircraft.Bf-109E-1B]
-  Player 1
-  ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_SHIP /1xSC250 500 2000
-  ATTACK_RADAR /4xSC50 500 2000 /1xSC250 500 2000
-[Aircraft.Bf-109E-1B_4xSC50]
-  Weapons 1 1 2
-  Fuel 100
-  Range #
-  Ceiling #
-[Aircraft.Bf-109E-1B_1xSC250]
-  Weapons 1 1 3
-  Fuel 100
-  Range #
-  Ceiling #  
 [Aircraft.Bf-109E-3]
   Player 1
   ESCORT /Default 0 10000
@@ -120,16 +104,30 @@
   Ceiling #
 [Aircraft.Bf-109E-3B]
   Player 1
-  ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_SHIP /1xSC250 500 2000
-  ATTACK_RADAR /4xSC50 500 2000 /1xSC250 500 2000
-[Aircraft.Bf-109E-3B_4xSC50]
+  ATTACK_ARMOR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
+  ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+[Aircraft.Bf-109E-3B_4xSC50_Low]
+  Weapons 1 1 2
+  Detonator Bomb.SC-250_Type1_J 2 -1 0
+  Detonator Bomb.SC-50_GradeII_J 1 -1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-3B_1xSC250_Low]
+  Weapons 1 1 3
+  Detonator Bomb.SC-250_Type1_J 2 -1 0
+  Detonator Bomb.SC-50_GradeII_J 1 -1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-3B_4xSC50_High]
   Weapons 1 1 2
   Fuel 100
   Range #
   Ceiling #
-[Aircraft.Bf-109E-3B_1xSC250]
+[Aircraft.Bf-109E-3B_1xSC250_High]
   Weapons 1 1 3
   Fuel 100
   Range #
@@ -146,16 +144,30 @@
   Ceiling #
 [Aircraft.Bf-109E-4B]
   Player 1
-  ATTACK_ARMOR /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_VEHICLE /4xSC50 500 2000 /1xSC250 500 2000
-  ATTACK_SHIP /1xSC250 500 2000
-  ATTACK_RADAR /4xSC50 500 2000 /1xSC250 500 2000
-[Aircraft.Bf-109E-4B_4xSC50]
+  ATTACK_ARMOR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
+  ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+[Aircraft.Bf-109E-4B_4xSC50_Low]
+  Weapons 1 1 2
+  Detonator Bomb.SC-250_Type1_J 2 -1 0
+  Detonator Bomb.SC-50_GradeII_J 1 -1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-4B_1xSC250_Low]
+  Weapons 1 1 3
+  Detonator Bomb.SC-250_Type1_J 2 -1 0
+  Detonator Bomb.SC-50_GradeII_J 1 -1 0
+  Fuel 100
+  Range #
+  Ceiling #
+[Aircraft.Bf-109E-4B_4xSC50_High]
   Weapons 1 1 2
   Fuel 100
   Range #
   Ceiling #
-[Aircraft.Bf-109E-4B_1xSC250]
+[Aircraft.Bf-109E-4B_1xSC250_High]
   Weapons 1 1 3
   Fuel 100
   Range #
