--- a/IL2DCE/IL2DCE/IL2DCE.Inst.template
+++ b/IL2DCE/IL2DCE/IL2DCE.Inst.template
@@ -31,6 +31,8 @@ file "parts\IL2DCE\IL2DCE.dll"
 file "parts\IL2DCE\IL2DCE.Game.dll"
 file "parts\IL2DCE\IL2DCE.Mission.dll"
 file "parts\IL2DCE\IL2DCE.Pages.dll"
+file "parts\IL2DCE\IL2DCE.Server.dll"
+file "parts\IL2DCE\IL2DCE.Single.dll"
 
 writeUninstaller "$INSTDIR\parts\IL2DCE\uninst.exe"
 
@@ -76,6 +78,8 @@ delete "$INSTDIR\IL2DCE.dll"
 delete "$INSTDIR\IL2DCE.Game.dll"
 delete "$INSTDIR\IL2DCE.Mission.dll"
 delete "$INSTDIR\IL2DCE.Pages.dll"
+delete "$INSTDIR\IL2DCE.Server.dll"
+delete "$INSTDIR\IL2DCE.Single.dll"
 RMDir "$INSTDIR"
 
 sectionEnd
