--- a/IL2DCE/Campaigns/AircraftInfo.ini
+++ b/IL2DCE/Campaigns/AircraftInfo.ini
@@ -23,6 +23,7 @@
   Aircraft.BeaufighterMkIF
   Aircraft.Bf-108B-2
   Aircraft.Bf-109E-1 
+  Aircraft.Bf-109E-1B
   Aircraft.Bf-109E-3
   Aircraft.Bf-109E-3B
   Aircraft.Bf-109E-4
@@ -107,6 +108,8 @@
   ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
   ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
   ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_DEPOT /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_AIRBASE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
 [Aircraft.Bf-109E-3B_4xSC50_Low]
   Weapons 1 1 2
   Detonator Bomb.SC-250_Type1_J 2 -1 0
@@ -147,6 +150,8 @@
   ATTACK_VEHICLE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
   ATTACK_SHIP /1xSC250_Low 500 1000 /1xSC250_High 1000 2000
   ATTACK_RADAR /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_DEPOT /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
+  ATTACK_AIRBASE /4xSC50_Low 500 1000 /1xSC250_Low 500 1000 /4xSC50_High 1000 2000 /1xSC250_High 1000 2000
 [Aircraft.Bf-109E-4B_4xSC50_Low]
   Weapons 1 1 2
   Detonator Bomb.SC-250_Type1_J 2 -1 0
@@ -188,6 +193,8 @@
   ATTACK_VEHICLE /2xSD250 500 2000 /2xSD500 500 2000
   ATTACK_SHIP /2xSC250 500 2000 /2xSC500 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /2xSC500 500 2000
+  ATTACK_DEPOT /2xSC250 500 2000 /2xSC500 500 2000
+  ATTACK_AIRBASE /2xSC250 500 2000 /2xSC500 500 2000
 [Aircraft.Bf-110C-7_2xSC250]
   Weapons 1 1 1 2
   Fuel 100
@@ -218,6 +225,8 @@
   ATTACK_VEHICLE /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_SHIP /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_RADAR /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_DEPOT /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_AIRBASE /4x250lb 500 2000 /4x250lb 500 2000
 [Aircraft.BlenheimMkI_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -243,6 +252,8 @@
   ATTACK_VEHICLE /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_SHIP /4x250lb 500 2000 /4x250lb 500 2000
   ATTACK_RADAR /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_DEPOT /4x250lb 500 2000 /4x250lb 500 2000
+  ATTACK_AIRBASE /4x250lb 500 2000 /4x250lb 500 2000
 [Aircraft.BlenheimMkIV_Default]
   Weapons 1 1 0 0 0
   Fuel 100
@@ -268,6 +279,8 @@
   ATTACK_VEHICLE /12x50T 500 2000 /12x100T 500 2000 /2x500MT 500 2000
   ATTACK_SHIP /2x500MT 500 2000 /2x800T 500 2000
   ATTACK_RADAR /2x500MT 500 2000 /2x800T 500 2000
+  ATTACK_DEPOT /2x500MT 500 2000 /2x800T 500 2000
+  ATTACK_AIRBASE /2x500MT 500 2000 /2x800T 500 2000
 [Aircraft.BR-20M_Default]
   Weapons 1 1 1 0
   Fuel 100
@@ -333,6 +346,8 @@
   ATTACK_VEHICLE /2xSC250 500 2000 /20xSC50 500 2000
   ATTACK_SHIP /2xSC250 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_DEPOT /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_AIRBASE /2xSC250 500 2000 /20xSC50 500 2000
 [Aircraft.Do-17Z-1_Default]
   Weapons 1 1 1 1 0 0 
   Fuel 100
@@ -358,6 +373,8 @@
   ATTACK_VEHICLE /2xSC250 500 2000 /20xSC50 500 2000
   ATTACK_SHIP /2xSC250 500 2000
   ATTACK_RADAR /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_DEPOT /2xSC250 500 2000 /20xSC50 500 2000
+  ATTACK_AIRBASE /2xSC250 500 2000 /20xSC50 500 2000
 [Aircraft.Do-17Z-2_Default]
   Weapons 1 1 1 1 1 1 0 0 
   Fuel 100
@@ -438,6 +455,8 @@
   ATTACK_VEHICLE /8xSD250 500 2000 /32xSC50 500 2000
   ATTACK_SHIP /8xSC250 500 2000
   ATTACK_RADAR /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_DEPOT /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_AIRBASE /8xSC250 500 2000 /32xSC50 500 2000
 [Aircraft.He-111H-2_Default]
   Weapons 1 1 1 1 1 1 0
   Fuel 100
@@ -468,6 +487,8 @@
   ATTACK_VEHICLE /8xSD250 500 2000 /32xSC50 500 2000
   ATTACK_SHIP /8xSC250 500 2000
   ATTACK_RADAR /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_DEPOT /8xSC250 500 2000 /32xSC50 500 2000
+  ATTACK_AIRBASE /8xSC250 500 2000 /32xSC50 500 2000
 [Aircraft.He-111P-2_Default]
   Weapons 1 1 1 1 1 1 0
   Fuel 100
@@ -539,6 +560,8 @@
   ATTACK_VEHICLE /1xSD250+4xSC50 1000 5000 /1xSD500 1000 5000
   ATTACK_SHIP /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
   ATTACK_RADAR /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
+  ATTACK_DEPOT /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
+  ATTACK_AIRBASE /1xSC250+4xSC50 1000 5000 /1xSC500 1000 5000
 [Aircraft.Ju-87B-2_Default]
   Weapons 1 1 0 0
   Fuel 100
@@ -574,6 +597,8 @@
   ATTACK_VEHICLE /4xSD250 500 2000
   ATTACK_SHIP /4xSC250 500 2000
   ATTACK_RADAR /4xSC250 500 2000
+  ATTACK_DEPOT /4xSC250 500 2000
+  ATTACK_AIRBASE /4xSC250 500 2000
 [Aircraft.Ju-88A-1_Default]
   Weapons 1 1 1 0 0 0
   Fuel 100
@@ -663,6 +688,8 @@
   ATTACK_VEHICLE /18x250lb 500 2000 /9x250lb 500 2000
   ATTACK_SHIP /18x250lb 500 2000 /9x250lb 500 2000
   ATTACK_RADAR /18x250lb 500 2000 /9x250lb 500 2000
+  ATTACK_DEPOT /18x250lb 500 2000 /9x250lb 500 2000
+  ATTACK_AIRBASE /18x250lb 500 2000 /9x250lb 500 2000
 [Aircraft.WellingtonMkIc_Default]
   Weapons 1 1 0
   Fuel 100
